<resources>
    <string name="app_name">Trace Point</string>
    <string name="action_settings">Settings</string>

    <string name="login_id_hint">请输入邮箱</string>
    <string name="login">登录</string>
    <string name="login_pwd_hint">请输入密码</string>

    <string name="logout">注销</string>

    <string name="back">返回</string>

    <string name="register">新用户注册</string>
    <string name="reg_id_hint">请输入邮箱</string>
    <string name="reg_Name_hint">请输入用户名，不多于20位</string>
    <string name="reg_pwd_hint">6~20位密码，至少包括字母和数字</string>

    <string name="misspassword">无法登录？</string>
    <string name="newuser">新用户</string>

    <string name="auth_code">验证码</string>
    <string name="check">换一张</string>
    <string name="isture">确认</string>
    <string name="findpassword">找回密码</string>
    <string name="truepassword">确认您的密码</string>
    <string name="id_true">格式错误</string>
    <string name="pstrue">密码不一致</string>
    <string name="autetrue">验证码错误</string>
    <string name="changepw">修改密码</string>
    <string name="true_change">确认修改</string>
    <string name="newpassword">请输入6~20位的新密码</string>
    <string name="oldpasswors">请输入旧密码</string>
    <string name="idh">用户不存在</string>
    <string name="wrongpw">密码输入错误</string>

    <string name="footprint">足迹</string>
    <string name="user">用户</string>
    <string name="post">发布</string>

</resources>
