<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".loginActivity">

    <ImageView
        android:id="@+id/loginUser"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/login"
        android:scaleType="fitXY"
        android:src="@mipmap/icon" />

    <LinearLayout
        android:id="@+id/login_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginUser"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginId_edtxt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/login_id_hint"
            android:textColorHint="#CDCDC1"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/loginline"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#D7D7D7"
            android:orientation="vertical"></LinearLayout>

        <EditText
            android:id="@+id/loginPwd_edtxt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:textColorHint="#CDCDC1"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_linearlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg_logout"
        android:includeFontPadding="false"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remember_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住密码"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:includeFontPadding="false"
            android:text="@string/register"
            android:textColor="@color/grey_dark"
            android:textSize="17sp" />
    </RelativeLayout>


</RelativeLayout>
