<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ViewStub
        android:id="@+id/footrint_ViewStub"
        android:layout="@layout/activity_footprint"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
    <ViewStub
        android:id="@+id/publish_ViewStub"
        android:layout="@layout/activity_publish"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
    <ViewStub
        android:id="@+id/person_ViewStub"
        android:layout="@layout/activity_person"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />

    <TableLayout android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/tab_bg">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="64dip"
            android:layout_margin="2dip"
            >
            <Button
                android:gravity="center_horizontal"
                android:background="#f5f5f5"
                android:id="@+id/btn_footprint"
                android:layout_width="70dip"
                android:layout_height="54dip"
                android:layout_weight="1"
                android:text="@string/footprint"
                android:textColor="#888888"
                android:textStyle="bold"
                android:textSize="24dip"
                android:paddingTop="15dp"
                />
            <Button
                android:gravity="center_horizontal"
                android:background="#f5f5f5"
                android:id="@+id/btn_publish"
                android:layout_width="70dip"
                android:layout_height="54dip"
                android:layout_weight="1"
                android:text="@string/post"
                android:textColor="#888888"
                android:textStyle="bold"
                android:textSize="24dip"
                android:paddingTop="15dp"
                />
            <Button
                android:gravity="center_horizontal"
                android:background="#f5f5f5"
                android:id="@+id/btn_person"
                android:layout_width="70dip"
                android:layout_height="54dip"
                android:layout_weight="1"
                android:text="@string/user"
                android:textColor="#888888"
                android:textStyle="bold"
                android:textSize="24dip"
                android:paddingTop="15dp"
                />

        </TableRow>
    </TableLayout>

</RelativeLayout>